# deepKT-IRT

./: .gitignore  AGENTS.md  AZURE_MIGRATION.md  CLAUDE.md  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  SYSTEM_DOCUMENTATION.md  create_components.py  environment.yml  main.py  orig_Plan.md  plan.md  pyproject.toml  requirements.txt  viz.md
.beads/: README.md  issues.jsonl
configs/: README.md  sakt_assist2009.yaml  sakt_edm.yaml  wd_irt_edm.yaml
data/: README.md
docs/: debug.html  index.html  index.md  simple-test.html  streamlit_beads.md  test.html  visualizations.html
execplans/: assistments_data.md  data_layer.md  enhancement_priorities.md  enhancements_phase5.md  github_pages_dashboard.md  implementation_review.md  integration_phase4.md  phase5a_implementation.md  repo_skeleton.md  rl_recommendations_phase5b.md  sakt_phase2.md  streamlit_dashboard.md  unified_data_phase3.md  wd_irt_phase1.md
notebooks/: system_demo.ipynb  visualizations.ipynb  wd_irt_colab.ipynb
osfstorage-archive/: README.md  env.yml  pyproject.toml
osfstorage-archive/edm2023/: dataset.py  model.py  preprocessing.py
osfstorage-archive/notebooks/: explore-datasets.ipynb
osfstorage-archive/tests/: conftest.py
osfstorage-archive/tests/unit/: test_dataset.py  test_model.py
reports/: README.md
scripts/: README.md  demo_trace.py  generate_bandit_decisions.py  generate_viz_data.py  poc_explainability.py  poc_gaming_detection.py  poc_rl_recommendations.py  pykt_sakt_spike.py  test_training_smoke.py  validate_join.py  validate_viz_dependencies.py  warmstart_bandit.py
(+133 files in other folders)
