[tool.poetry]
name = "edm2023"
version = "0.1.0"
description = ""
authors = ["scott"]

[tool.poetry.dependencies]
python = "3.9"
polars = "^0.16.18"
pydantic = "^1.10.7"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
torch-geometric = "^2.3.0"
tensorflow = "^2.12.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
nbformat = "^5.8.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
pytest = "^7.2.2"
ipykernel = "^6.22.0"
seaborn = "^0.12.2"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
